Add update function
