# api/controllers/userController.js
@@ -1,6 +1,7 @@
 'use strict';
 
 const db = require('../lib/db');
+const _ = require('lodash');
 
 class userController {
   static login (req, res) {
@@ -9,6 +10,7 @@ class userController {
     return db.userModel.findOne({userName: userName, password: password}, {_id: 0}).then(function (data) {
       return res.status(200).send({userName: data._doc.userName});
     }).catch(function (error) {
+      console.log(error);
       return res.status(500).send({message: 'User name or password error'});
     });
   }
@@ -20,10 +22,11 @@ class userController {
       if (user) {
         return res.status(400).send({message: 'User already register'});
       }
-      return new db.userModel({userName: userName, password: password}, false).save().then(function (data) {
+      return new db.userModel({userName: userName, password: password}).save().then(function (data) {
         return res.status(200).send({message: 'Register success'});
       })
     }).catch(function (error) {
+      console.log(error);
       return res.status(500).send({message: 'Register failed'});
     });
   }
@@ -39,7 +42,23 @@ class userController {
         return res.status(200).send({message: 'Change password success'});
       })
     }).catch(function (error) {
+      console.log(error);
       return res.status(500).send({message: 'Change password failed'});
+    });
+  }
+
+  static getUserList (req, res) {
+    return db.userModel.find({}, {password: 0}).then(function (users) {
+      if (!users && users.length <= 0) {
+        return res.status(404).send({message: 'No user list found'});
+      }
+      let results = _.map(users, function (user) {
+        return user.userName;
+      });
+      return res.status(200).send(results);
+    }).catch(function (error) {
+      console.log(error);
+      return res.status(500).send({message: 'Get user list failed'});
     });
   }
 }
@@ -47,5 +66,6 @@ class userController {
 module.exports = {
   login: userController.login,
   register: userController.register,
-  changePassword: userController.changePassword
+  changePassword: userController.changePassword,
+  getUserList: userController.getUserList
 };
